# head_pose_icub_loihi

./: README.md
loihi_net/: __init__.py  connections.py  hd_net.py  main_hd_net.py  parameters.py
snips/: CMakeLists.txt  build.sh  embedded_snip.c  embedded_snip.h  yarp_host_snip.cc
